--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -35,7 +35,9 @@
 
   <ul class="sidebar-nav">
     {% if user.is_authenticated %}
-    <li><a href="{% url 'my-wall-materials-prices' %}">Мои цены</a></li>
+    <li><a href="{% url 'plans' %}">Мои проекты</a></li>
+    <li><a href="{% url 'my-wall-materials-prices' %}">Мои цены на материалы</a></li>
+    <li><a href="{% url 'my-work-prices' %}">Мои цены на работы/услуги</a></li>
     {% endif %}
 
   </ul>
