версия, где хранятся массивы элементов, а не точек

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -19,6 +19,7 @@
         <div class="col-sm-10" id="edit-field">
 
           <canvas id="canvas" style="border: 1px solid" width="700" height="700"></canvas>
+          <canvas id="stick_layer" style="border: 1px solid" width="700" height="700"></canvas>
 
         </div>
 
