--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -17,11 +17,12 @@
         </div>
 
         <div class="col-sm-10" id="edit-field">
-
-          <canvas id="canvas" style="border: 1px solid" width="700" height="700"></canvas>
-          <canvas id="stick_layer" style="border: 1px solid" width="700" height="700"></canvas>
-
+          <div id="stage">
+            <canvas id="canvas" style="border: 1px solid; " width="700" height="700"></canvas>
+            <canvas id="stick_layer" style="border: 1px solid; " width="700" height="700"></canvas>
+          </div>
         </div>
+
 
         <div class="col-sm-1" id="right-edit-field">
           Числа справа
@@ -47,6 +48,12 @@
         <button id="none" type="button" class="btn btn-light">Сброс</button>
         <button id="wall" type="button" class="btn btn-light">Стена</button>
       </div>
+
+
+      <div id="test_buttons" class="btn-group">
+        <button id="test_render" type="button" class="btn btn-light">Проверить</button>
+      </div>
+
     </div>
 
 
