--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -18,8 +18,8 @@
 
         <div class="col-sm-10" id="edit-field">
           <div id="stage">
-            <canvas id="canvas" style="border: 1px solid; " width="700" height="700"></canvas>
-            <canvas id="stick_layer" style="border: 1px solid; " width="700" height="700"></canvas>
+            <canvas id="canvas_0" style="border: 1px solid; " width="700" height="700"></canvas>
+            <canvas id="canvas_1" style="border: 1px solid; " width="700" height="700"></canvas>
           </div>
         </div>
 
