вариант когда в массиве точек хранится индекс и массив с координатами, вместо структуры: индекс, х, у.

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -20,6 +20,7 @@
           <div id="stage">
             <canvas id="canvas_0" style="border: 1px solid; " width="700" height="700"></canvas>
             <canvas id="canvas_1" style="border: 1px solid; " width="700" height="700"></canvas>
+            <canvas id="canvas_2" style="border: 1px solid; " width="700" height="700"></canvas>
           </div>
         </div>
 
