--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -5,39 +5,18 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-10">
-      <div class="row">
-        <div class="col-sm-12" id="top-edit-field">
-          Верхние числа
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-1" id="left-edit-field">
-          числа слева
-        </div>
+
 
         <div class="col-sm-10" id="edit-field">
           <div id="stage">
-            <canvas id="canvas_0" style="border: 1px solid; " width="700" height="700"></canvas>
-            <canvas id="canvas_1" style="border: 1px solid; " width="700" height="700"></canvas>
-            <canvas id="canvas_2" style="border: 1px solid; " width="700" height="700"></canvas>
+            <canvas id="canvas_0" style="border: 1px solid; left: 50px; top: 20px;" width="800" height="700"></canvas>
+            <canvas id="canvas_1" style="border: 1px solid;  left: 50px; top: 20px;" width="800" height="700"></canvas>
+            <canvas id="canvas_2" style="border: 1px solid; " width="900" height="740"></canvas>
+            <canvas id="canvas_3" style="border: 1px solid; " width="900" height="740"></canvas>
           </div>
         </div>
 
 
-        <div class="col-sm-1" id="right-edit-field">
-          Числа справа
-        </div>
-
-        <div class="row">
-          <div class="col-sm-12" id="bottom-edit-field">
-            видимо, числа снизу
-          </div>
-        </div>
-
-      </div>
-
-    </div>
 
     <div class="col-sm-2">
       <div id="line_type_selector" class="btn-group">
