--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -7,14 +7,14 @@
   <div class="row">
 
 
-        <div class="col-sm-10" id="edit-field">
-          <div id="stage">
-            <canvas id="canvas_0" style="border: 1px solid; left: 50px; top: 20px;" width="800" height="700"></canvas>
-            <canvas id="canvas_1" style="border: 1px solid;  left: 50px; top: 20px;" width="800" height="700"></canvas>
-            <canvas id="canvas_2" style="border: 1px solid; " width="900" height="740"></canvas>
-            <canvas id="canvas_3" style="border: 1px solid; " width="900" height="740"></canvas>
-          </div>
-        </div>
+    <div class="col-sm-10" id="edit-field">
+      <div id="stage">
+        <canvas id="canvas_0" style="border: 1px solid; left: 50px; top: 20px;" width="800" height="700"></canvas>
+        <canvas id="canvas_1" style="border: 1px solid;  left: 50px; top: 20px;" width="800" height="700"></canvas>
+        <canvas id="canvas_2" style="border: 1px solid; " width="900" height="740"></canvas>
+        <canvas id="canvas_3" style="border: 1px solid; " width="900" height="740"></canvas>
+      </div>
+    </div>
 
 
 
@@ -27,6 +27,10 @@
       <div id="element_selector" class="btn-group">
         <button id="none" type="button" class="btn btn-light">Сброс</button>
         <button id="wall" type="button" class="btn btn-light">Стена</button>
+        <select id="edge" name="edge">
+          <option value="1" selected>1</option>
+          <option value="3">3</option>
+        </select>
       </div>
 
       <div id="test_buttons" class="btn-group">
