перед глобальным изменением

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -15,33 +15,23 @@
         <canvas id="canvas_3" style="border: 1px solid; " width="900" height="740"></canvas>
       </div>
     </div>
-
-
-
     <div class="col-sm-2">
       <div id="line_type_selector" class="btn-group">
         <button id="straight" type="button" class="btn btn-light">Прямая</button>
-        <button id="curve" type="button" class="btn btn-light">Кривая</button>
+        <button id="polygon" type="button" class="btn btn-light">Многоугольник</button>
       </div>
 
       <div id="element_selector" class="btn-group">
         <button id="none" type="button" class="btn btn-light">Сброс</button>
         <button id="wall" type="button" class="btn btn-light">Стена</button>
-        <select id="edge" name="edge">
-          <option value="1" selected>1</option>
-          <option value="3">3</option>
-        </select>
       </div>
-
+<!--
       <div id="test_buttons" class="btn-group">
         <button id="test_render" type="button" class="btn btn-light">Проверить</button>
       </div>
-
+-->
     </div>
-
-
   </div>
-
 </div>
 
 
