сохранение круглоо и трехстороннего эркеров и воспроизведение их

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -18,7 +18,13 @@
     <div class="col-sm-2">
       <div id="line_type_selector" class="btn-group">
         <button id="straight" type="button" class="btn btn-light">Прямая</button>
+        <button id="curve" type="button" class="btn btn-light">Кривая</button>
         <button id="polygon" type="button" class="btn btn-light">Многоугольник</button>
+        <select id="polygon_sides" name="">
+          <option value="2">2</option>
+          <option value="3" selected>3</option>
+          <option value="4">4</option>
+      </select>
       </div>
 
       <div id="element_selector" class="btn-group">
