--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -36,6 +36,7 @@
       <div id="element_selector" class="btn-group">
         <button id="none" type="button" class="btn btn-light">Сброс</button>
         <button id="wall" type="button" class="btn btn-light">Стена</button>
+        <button id="entrance_group" type="button" class="btn btn-light">Входная группа</button>
       </div>
       <!--
       <div id="test_buttons" class="btn-group">
