--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -38,11 +38,11 @@
         <button id="wall" type="button" class="btn btn-light">Стена</button>
         <button id="entrance_group" type="button" class="btn btn-light">Входная группа</button>
       </div>
-      <!--
+      
       <div id="test_buttons" class="btn-group">
-        <button id="test_render" type="button" class="btn btn-light">Проверить</button>
+        <button id="calculate" type="button" class="btn btn-light">Расчет</button>
       </div>
--->
+
     </div>
   </div>
 </div>
@@ -70,5 +70,6 @@
 <script type="text/javascript" src="{% static 'js/canvas.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/func.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/schemeCanvasClick.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/calc.js' %}"></script>
 
 {% endblock %}
