--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -38,11 +38,13 @@
         <button id="wall" type="button" class="btn btn-light">Стена</button>
         <button id="entrance_group" type="button" class="btn btn-light">Входная группа</button>
       </div>
-      
-      <div id="test_buttons" class="btn-group">
-        <button id="calculate" type="button" class="btn btn-light">Расчет</button>
-      </div>
 
+      <!-- <div id="test_buttons" class="btn-group">
+        <button id="sender" type="button" class="btn btn-light">Расчет</button>
+      </div> -->
+      <input type="text" id="user-input" autofocus=""><br>
+      <button type="button" id="sender">Send data</button><br>
+      <p id="p-text">foo bar</p>
     </div>
   </div>
 </div>
