вычислеия вынесены в функцию

--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -39,6 +39,8 @@
     <li><a href="{% url 'plans' %}">Мои проекты</a></li>
     <li><a href="{% url 'my-wall-materials-prices' %}">Мои цены на материалы</a></li>
     <li><a href="{% url 'my-work-prices' %}">Мои цены на работы/услуги</a></li>
+    <li><a href="{% url 'edit' %}">Мой профиль</a></li>
+
     {% endif %}
 
   </ul>
