--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="http://ajax.aspnetcdn.com/ajax/jquery.ui/1.10.3/themes/sunny/jquery-ui.css">
 
 <h3>Проект: {{ plan_title }}</h3>
+<h4>Тест: {{ test }}</h4>
 
 <div class="container-fluid">
   <div class="row">
