--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -44,30 +44,38 @@
         <button id="sender" type="button" class="btn btn-light">Расчет</button>
       </div> -->
       <!-- <a href="{% url 'get_response'  plan_id  %}">Расчет</a>  -->
+      <div id="" class="btn-group">
+        <button id="save" type="button" class="btn btn-light">Сохранить</button>
+        <button id="restore" type="button" class="btn btn-light">Получить</button>
+      </div>
+      
+      <form id="canvas_form" class="canvas-field" action="" name="{{ plan_id}}" method="POST">
+        {% csrf_token %}
+      </form>
 
-
-      <input type="text" id="user-input" autofocus=""><br>
-      <button type="button" id="sender">Send data</button><br>
-      <p id="p-text">foo bar</p>
+      <!-- <input type="text" id="user-input" autofocus=""><br>
+      <button type="button" id="save">Сохранить</button><br> -->
+      <!-- <p id="p-text">foo bar</p> -->
 
       <script>
 
-        $("#sender").click(function () {
-          var input = $('#user-input').val();
-          
+        // $("#sender").click(function () {
+        //   var input = $('#user-input').val();
 
-          $.ajax({
-            url: "{% url 'get_response'  plan_id  %}",
-            data: {
-              'inputValue': input
-            },
-            dataType: 'json',
-            success: function (data) {
-              dataX = data["respond"];
-              
-            }
-          });
-        });
+
+        //   $.ajax({
+        //     url: "{% url 'get_response'  plan_id  %}",
+        //     data: {
+        //       'inputValue': input
+        //     },
+        //     dataType: 'json',
+        //     success: function (data) {
+        //       console.log("data = ", data)
+        //       // dataX = data["respond"];
+
+        //     }
+        //   });
+        // });
 
       </script>
 
