фильтры в виде динамически создаваемых чекбоксов, перед изменением

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -83,10 +83,22 @@
     </div>
   </div>
 
-  <div class="filters" name="{{ test }}">
-    <h3>Фильтры</h3>
-  </div>
 
+
+</div>
+<div class="container">
+  <br>
+  <br>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <div id="filters" name="{{ test }}">
+        <h3>Фильтры</h3>
+      </div>
+      <button type="button" id="calculate">Рассчитать варианты</button>
+    </div>
+  </div>
 </div>
 
 <div id="dialog" title="Стены" class="ui-widget">
