--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -93,10 +93,42 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-      <div id="filters" name="{{ test }}">
-        <h3>Фильтры</h3>
-      </div>
-      <button type="button" id="calculate">Рассчитать варианты</button>
+      <h3>Фильтры</h3>
+      <h5>Несущие стены, смежные с жилыми помещениями</h5>
+      
+      <p>
+        <label for="living_bearing_material_type">Тип материала:</label>
+        <input type="checkbox" checked name="living_bearing_material_type" />
+        <select id="living_bearing_material_type" name="living_bearing_material_type">
+          <option value="">Нажмите кнопку поиска внизу</option>
+        </select>
+      </p>
+      <p>
+        <label for="living_bearing_material_unit">Материал:</label>
+        <input type="checkbox" checked name="living_bearing_material_unit" />
+        <select id="living_bearing_material_unit" name="living_bearing_material_unit">
+          <option value="">Нажмите кнопку поиска внизу</option>
+        </select>
+      </p>
+
+      <h5>Несущие стены в нежилых помещениях</h5>
+      <p>
+        <p><input type="checkbox" checked name="uninhabited_bearing_same_material" />Как и в жилых</p>
+        <label for="uninhabited_bearing_material_type">Тип материала:</label>
+        <input type="checkbox" checked name="uninhabited_bearing_material_type" />
+        <select id="uninhabited_bearing_material_type" name="uninhabited_bearing_material_type">
+          <option value="">Нажмите кнопку поиска внизу</option>
+        </select>
+      </p>
+      <p>
+        <label for="living_bearing_material_unit">Материал:</label>
+        <input type="checkbox" checked name="living_bearing_material_unit" />
+        <select id="living_bearing_material_unit" name="living_bearing_material_unit">
+          <option value="">Нажмите кнопку поиска внизу</option>
+        </select>
+      </p>
+
+      <button type="button" id="calculate">Показать самый дешевый вариант</button>
     </div>
   </div>
 </div>
