--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -139,17 +139,17 @@
   <div><label for="wall_type">Тип стены: </label>
     <p><input type="radio" value="bearing" id="wall_type" name="wall_type" />Несущая</p>
     <p><input type="radio" value="partition" id="wall_type" name="wall_type" />Перегородка</p>
-    <p><input type="radio" value="not_set" checked id="wall_type" name="wall_type" />Не задано</p>
+    <!-- <p><input type="radio" value="not_set" checked id="wall_type" name="wall_type" />Не задано</p> -->
   </div>
   <div><label for="living">Смежная с жилым помещением:</label>
     <p><input type="radio" value="living" id="living" name="living" />Да</p>
     <p><input type="radio" value="uninhabited" id="living" name="living" />Нет</p>
-    <p><input type="radio" value="not_set" checked id="living" name="living" />Не задано</p>
+    <!-- <p><input type="radio" value="not_set" checked id="living" name="living" />Не задано</p> -->
   </div>
   <div><label for="outdoor">Наружная: </label>
     <p><input type="radio" value="outdoor" id="outdoor" name="outdoor" />Да</p>
     <p><input type="radio" value="indoor" id="outdoor" name="outdoor" />Нет</p>
-    <p><input type="radio" value="not_set" checked id="outdoor" name="outdoor" />Не задано</p>
+    <!-- <p><input type="radio" value="not_set" checked id="outdoor" name="outdoor" />Не задано</p> -->
   </div>
 </div>
 
