--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -34,7 +34,7 @@
         </select>
       </div>
 
-      <div id="floor_selector">
+      <div id="level_selector">
         <div class="btn-group">
           <button id="floor_1" type="button" class="btn btn-light">1 эт</button>
           <button id="floor_2" type="button" class="btn btn-light">2 эт</button>
@@ -44,12 +44,12 @@
       <div id="element_selector">
         <div class="btn-group">
           <button id="none" type="button" class="btn btn-light">Сброс</button>
-        </div>
-        <div class="btn-group">
+        <!-- </div>
+        <div class="btn-group"> -->
           <button id="wall" type="button" class="btn btn-light">Стена</button>
           <button id="entrance_group" type="button" class="btn btn-light">Входная группа</button>
-          <button id="floor_garage" type="button" class="btn btn-light">Пол гаражного типа</button>
           <button id="stairwell" type="button" class="btn btn-light">Лестничный пролёт</button>
+          <button id="plate_garage" type="button" class="btn btn-light">Пол гаража</button>
         </div>
       </div>
 
