работает определение расположения точки на элементе для ввода окон и др. проемов

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -52,8 +52,9 @@
             <button id="plate_garage" type="button" class="btn btn-light">Пол гаража</button>
             <button id="roof" type="button" class="btn btn-light">Кровля</button>
             <button id="roof" type="button" class="btn btn-light">Балкон сделать</button>
-            <button id="window" type="button" class="btn btn-light">Оконный</button>
-            <button id="door" type="button" class="btn btn-light">Проходной</button>
+            <button id="window" type="button" class="btn btn-light">Окно</button>
+            <button id="door_window" type="button" class="btn btn-light">Дверь + окно</button>
+            <button id="opening" type="button" class="btn btn-light">Проем</button>
           </p>
         </div>
       </div>
