перед переделкой кровли

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -51,7 +51,8 @@
             <button id="stairwell" type="button" class="btn btn-light">Лестничный пролёт</button>
             <button id="plate_garage" type="button" class="btn btn-light">Пол гаража</button>
             <button id="roof" type="button" class="btn btn-light">Кровля</button>
-            <button id="roof" type="button" class="btn btn-light">Балкон сделать</button>
+            <button id="outdoor_space" type="button" class="btn btn-light">Открытое</button>
+            <button id="steps" type="button" class="btn btn-light">Ступени</button>
             <button id="window" type="button" class="btn btn-light">Окно</button>
             <button id="door_window" type="button" class="btn btn-light">Дверь + окно</button>
             <button id="opening" type="button" class="btn btn-light">Проем</button>
