--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -69,9 +69,7 @@
       </div>
 
 
-      <!-- <div id="test_buttons" class="btn-group">
-        <button id="sender" type="button" class="btn btn-light">Расчет</button>
-      </div> -->
+
       <!-- <a href="{% url 'get_response'  plan_id  %}">Расчет</a>  -->
       <div id="" class="btn-group">
         <button id="save" type="button" class="btn btn-light">Сохранить</button>
@@ -79,6 +77,10 @@
         <button id="post" type="button" class="btn btn-light">Выложить</button>
         <button id="restore" type="button" class="btn btn-light">Получить</button>
       </div>
+
+       <div id="test_buttons" class="btn-group">
+        <button id="3d" type="button" class="btn btn-light">3D</button>
+      </div> 
 
       <form id="canvas_form" class="canvas-field" action="" name="{{ plan_id}}" method="POST">
         {% csrf_token %}
@@ -114,14 +116,22 @@
     </div>
   </div>
 
-<div>
-  <canvas id="canvas" style="border: 1px solid;" width="800" height="700"></canvas>
-</div>
+
 
 </div>
 <div class="container">
   <br>
   <br>
+</div>
+
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-sm-10" id="edit-field">
+      <canvas id="canvas" style="border: 1px solid;  top: 100px;" width="800" height="700"></canvas>
+    </div>
+  </div>
 </div>
 
 <!-- Диалоговое окно для стен-->
@@ -171,6 +181,7 @@
 <script type="text/javascript" src="{% static 'js/func.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/schemeCanvasClick.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/calc.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/3d.js' %}"></script>
 
 {% endblock %}
 
