--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -191,6 +191,8 @@
 
 
 {% load static %}
+<script type="text/javascript" src="{% static 'js/three.module.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/OrbitControls.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/delaunay.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/canvas.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/func.js' %}"></script>
