ввод кровельных точек

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -169,6 +169,17 @@
 
 <!-- Диалоговое окно для кровли-->
 <div id="roof_dialog" title="Кровля" class="ui-widget">
+  <!-- <div><label for="high_side">Высота точек этой линии: </label>
+    <p><label><input type="checkbox" value="floor_1" id="floor_1" checked name="floor_1" />Высота 1 этажа</label></p>
+    <p><label><input type="checkbox" value="floor_2" id="floor_2" name="floor_2" />Высота 2 этажа</label></p>
+    <p><label><input type="checkbox" value="floor_3" id="floor_3" name="floor_3" />Высота 3 этажа</label></p>
+    <p><label><input type="number" id="ridge_height" name="ridge_height" min="-3000" max="8000" value="0">Добавочная высота</label></p>
+  </div> -->
+</div>
+
+
+
+<!-- <div id="roof_dialog" title="Кровля" class="ui-widget">
   <div><label for="high_side">Верхняя часть: </label>
     <p><input type="radio" value="point" id="high_side" checked name="high_side" />Точка</p>
     <p><input type="radio" value="line" id="high_side" name="high_side" />Линия</p>
@@ -187,7 +198,7 @@
   <div><label for="mauerlat_height">Высота мауэрлата (от ближайшего пола): </label>
     <p><input type="number" id="mauerlat_height" name="mauerlat_height" min="0" max="2000" value="0"></p>
   </div>
-</div>
+</div> -->
 
 
 {% load static %}
