рабочий вариант перед работой над сохранением проектов

--- a/catalog/templates/catalog/edit_scheme.html
+++ b/catalog/templates/catalog/edit_scheme.html
@@ -64,6 +64,7 @@
             <button id="window" type="button" class="btn btn-light">Окно</button>
             <button id="door_window" type="button" class="btn btn-light">Дверь + окно</button>
             <button id="opening" type="button" class="btn btn-light">Проем</button>
+            <button id="vent" type="button" class="btn btn-light">Вентканал</button>
           </p>
         </div>
       </div>
